[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flouds-ai"
version = "1.0.0"
description = "Multi-tenant AI inference service"
requires-python = ">=3.10"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
